<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SendGrid Example</string>
    <string name="edit_to">To:</string>
    <string name="edit_from">From:</string>
    <string name="edit_subject">Subject:</string>
    <string name="edit_text">Message:</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">SendGrid Example</string>
    <string name="title_activity_display_message">Result from SendGrid Web API</string>
    <string name="response_placeholder">Status from email send goes here.\n</string>
    <string name="stats_placeholder">Email statistics go here.</string>

</resources>
