<?xml version="1.0" encoding="utf-8"?>  
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView01"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:scrollbars="vertical">  
    <LinearLayout  
        android:layout_width="fill_parent"  
        android:orientation="vertical"  
        android:layout_height="wrap_content">  
     	
     	<EditText android:id="@+id/edit_to"
     	    android:inputType="textNoSuggestions"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/edit_to" />
    	
    	<EditText android:id="@+id/edit_from"
    	    android:inputType="textNoSuggestions"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/edit_from" />
     	
    	<EditText android:id="@+id/edit_subject"
    	    android:inputType="textNoSuggestions"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/edit_subject" />
    	
    	<EditText android:id="@+id/edit_text"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
    		android:gravity="top"
    		android:inputType="textMultiLine"  
    		android:lines="3" 
        	android:hint="@string/edit_text" />
    	
    	<Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_send"
        	android:onClick="sendMessage" />
    	
    </LinearLayout>  
</ScrollView>  